# BlueDrop

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  launch.ps1  package.bat  run.bat  run_debug.bat  test.bat  vcpkg.json
docs/: Architecture.md  DevLog.md  PRD.md
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h  TrayManager.cpp  TrayManager.h  UpdateChecker.cpp  UpdateChecker.h
src/audio/: AudioCaptureStream.cpp  AudioCaptureStream.h  AudioEngine.cpp  AudioEngine.h  AudioRenderStream.cpp  AudioRenderStream.h  DeviceEnumerator.cpp  DeviceEnumerator.h  Resampler.h  RingBuffer.h  SessionVolumeController.cpp  SessionVolumeController.h
src/bluetooth/: BluetoothManager.cpp  BluetoothManager.h  BluetoothTypes.h
src/qml/: main.qml
src/qml/components/: DeviceCard.qml  MixerCard.qml  NavSidebar.qml  StatusCard.qml  StyledComboBox.qml  VolumeSlider.qml
src/qml/pages/: BroadcastPage.qml  HelpPage.qml  HomePage.qml  SettingsPage.qml
src/qml/theme/: Theme.qml
src/system/: Logger.h  SystemChecker.cpp  SystemChecker.h
src/updater/: main.cpp
src/viewmodel/: BluetoothVM.cpp  BluetoothVM.h  DeviceVM.cpp  DeviceVM.h  MixerVM.cpp  MixerVM.h  SettingsVM.cpp  SettingsVM.h
tests/: CMakeLists.txt  test_audio_engine.cpp  test_bluetooth_manager.cpp  test_device_enumerator.cpp  test_placeholder.cpp  test_ring_buffer.cpp  test_system_checker.cpp
